# TaskSync

./: .gitignore  GEMINI.md  README.md  index.html  pyproject.toml  requirements.txt  setup.sh  sitemap-index.xml  test_key.py  utask-wrapper.sh  utask.spec
.github/workflows/: release.yml
Formula/: utask.rb
Raycast/: utask-add.sh  utask-today.sh
_astro/: Navbar.LcB07q6M.css
cookies/: index.html
task_sync/: api_apple.py  api_google.py  api_ms.py  auth.py  config.py  core.py  daemon.py  main.py  models.py  security.py  style.tcss  tui.py
task_sync/providers/: __init__.py  apple.py  base.py  google.py  microsoft.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: CookieBanner.astro  Features.astro  FooterSignature.astro  Hero.astro  Navbar.astro  Terminal.astro
website/src/layouts/: Layout.astro
website/src/pages/: cookies.astro  index.astro
website/src/styles/: global.css
