[tool.poetry]
name = "task_sync"
version = "0.1.0"
description = "Sync tasks across Apple Reminders, Google Tasks, and Microsoft To Do."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.0"}
sqlmodel = "^0.0.14"
google-api-python-client = "^2.115.0"
google-auth-oauthlib = "^1.2.0"
msal = "^1.26.0"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"
textual = "^0.50.0"

[tool.poetry.scripts]
utask = "task_sync.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
