[tool.poetry]
name = "task_sync"
version = "0.1.0"
description = "UniversalTask (utask) v2.0 - Async Task Sync Engine"
authors = ["aeon022 <gerwin.weiher@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
typer = {extras = ["all"], version = ">=0.15.0"}
sqlmodel = ">=0.0.30"
aiosqlite = ">=0.19.0"
aiohttp = ">=3.9.0"
google-api-python-client = ">=2.115.0"
google-auth-oauthlib = ">=1.2.0"
msal = ">=1.26.0"
textual = ">=0.50.0"
keyring = ">=24.3.0"
dateparser = ">=1.2.0"
pyobjc-framework-EventKit = {version = ">=10.0", platform = "darwin"}

[tool.poetry.scripts]
utask = "task_sync.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
